<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2019 Red Hat, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>com.redhat.rcm</groupId>
      <artifactId>redhat-releng-tools</artifactId>
      <version>10-SNAPSHOT</version>
   </parent>

   <groupId>org.goots.hiderdoclet</groupId>
   <artifactId>parent</artifactId>
   <version>1-SNAPSHOT</version>
   <packaging>pom</packaging>

   <name>Doclet to Hide Elements</name>
   <description>Doclet that will allow hiding/elements via annotations</description>
   <inceptionYear>2020</inceptionYear>
   <url>http://github.com/rnc/hiderdoclet</url>

   <licenses>
      <license>
         <name>APLv2.0</name>
         <distribution>repo</distribution>
      </license>
   </licenses>

   <developers>
      <developer>
         <id>rnc</id>
         <name>Nick Cross</name>
         <email>ncross@redhat.com</email>
      </developer>
   </developers>

   <scm>
      <connection>scm:git:https://github.com/rnc/hiderdoclet.git</connection>
      <developerConnection>scm:git:git@github.com:rnc/hiderdoclet.git</developerConnection>
      <url>http://github.com/rnc/hiderdoclet</url>
      <tag>HEAD</tag>
   </scm>

   <properties>
      <projectOwner>Red Hat, Inc.</projectOwner>

      <javaVersion>11</javaVersion>
      <javaTestVersion>${javaVersion}</javaTestVersion>
      <mavenVersion>3.6.3</mavenVersion>
      <slf4jVersion>1.7.30</slf4jVersion>

      <!-- <it.maven.home>${project.build.directory}/apache-maven-</it.maven.home> -->
      <!-- <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath> -->
      <!-- <itPomIncludes>*</itPomIncludes> -->
   </properties>

   <dependencyManagement>
      <dependencies>
<!--         <dependency>-->
<!--            <groupId>javax.inject</groupId>-->
<!--            <artifactId>javax.inject</artifactId>-->
<!--            <version>1</version>-->
<!--            <scope>provided</scope>-->
<!--         </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>org.apache.maven</groupId>-->
         <!--        <artifactId>maven-compat</artifactId>-->
         <!--        <version>${mavenVersion}</version>-->
         <!--        <scope>provided</scope>-->
         <!--      </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>org.apache.maven</groupId>-->
         <!--        <artifactId>maven-core</artifactId>-->
         <!--        <version>${mavenVersion}</version>-->
         <!--        <scope>provided</scope>-->
         <!--      </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>org.apache.maven</groupId>-->
         <!--        <artifactId>maven-artifact</artifactId>-->
         <!--        <version>${mavenVersion}</version>-->
         <!--        <scope>provided</scope>-->
         <!--      </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>org.apache.maven</groupId>-->
         <!--        <artifactId>maven-model</artifactId>-->
         <!--        <version>${mavenVersion}</version>-->
         <!--        <scope>provided</scope>-->
         <!--      </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>org.apache.maven</groupId>-->
         <!--        <artifactId>maven-settings</artifactId>-->
         <!--        <version>${mavenVersion}</version>-->
         <!--        <scope>provided</scope>-->
         <!--      </dependency>-->

         <dependency>
            <groupId>org.goots.hiderdoclet</groupId>
            <artifactId>doclet</artifactId>
            <version>1-SNAPSHOT</version>
         </dependency>

         <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
         </dependency>
         <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
         </dependency>
         <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
         </dependency>

         <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>com.github.stefanbirkner</groupId>
            <artifactId>system-rules</artifactId>
            <version>1.18.0</version>
            <scope>test</scope>
         </dependency>
<!--         <dependency>-->
<!--            <groupId>ch.qos.logback</groupId>-->
<!--            <artifactId>logback-classic</artifactId>-->
<!--            <version>1.3.0-alpha5</version>-->
<!--            &lt;!&ndash;        <scope>test</scope>&ndash;&gt;-->
<!--         </dependency>-->
         <!--      <dependency>-->
         <!--        <groupId>ch.qos.logback</groupId>-->
         <!--        <artifactId>logback-core</artifactId>-->
         <!--        <version>1.2.3</version>-->
         <!--&lt;!&ndash;        <scope>test</scope>&ndash;&gt;-->
         <!--      </dependency>-->
      </dependencies>
   </dependencyManagement>

   <!--  <dependencies>-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>javax.inject</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>javax.inject</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>org.apache.maven</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>maven-compat</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>org.apache.maven</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>maven-core</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>org.apache.maven</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>maven-artifact</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>org.apache.maven</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>maven-settings</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
   <!--&lt;!&ndash;      <groupId>org.apache.maven</groupId>&ndash;&gt;-->
   <!--&lt;!&ndash;      <artifactId>maven-model</artifactId>&ndash;&gt;-->
   <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
   <!--    <dependency>-->
   <!--      <groupId>org.slf4j</groupId>-->
   <!--      <artifactId>slf4j-api</artifactId>-->
   <!--    </dependency>-->

   <!--    <dependency>-->
   <!--      <groupId>junit</groupId>-->
   <!--      <artifactId>junit</artifactId>-->
   <!--    </dependency>-->
   <!--    <dependency>-->
   <!--      <groupId>com.github.stefanbirkner</groupId>-->
   <!--      <artifactId>system-rules</artifactId>-->
   <!--    </dependency>-->
   <!--    <dependency>-->
   <!--      <groupId>ch.qos.logback</groupId>-->
   <!--      <artifactId>logback-classic</artifactId>-->
   <!--    </dependency>-->
   <!--    <dependency>-->
   <!--      <groupId>ch.qos.logback</groupId>-->
   <!--      <artifactId>logback-core</artifactId>-->
   <!--    </dependency>-->
   <!--  </dependencies>-->

   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>com.mycila</groupId>
               <artifactId>license-maven-plugin</artifactId>
               <configuration>
                  <header>APACHE-2-SIMPLIFIED-COPYRIGHT.txt</header>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-release-plugin</artifactId>
               <configuration>
                  <mavenExecutorId>forked-path</mavenExecutorId>
                  <useReleaseProfile>false</useReleaseProfile>
                  <arguments>-Prelease,run-its</arguments>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-invoker-plugin</artifactId>
               <version>3.0.1</version>
               <configuration>
                  <debug>true</debug>
                  <showErrors>true</showErrors>
                  <addTestClassPath>true</addTestClassPath>
                  <projectsDirectory>src/it</projectsDirectory>
                  <showVersion>true</showVersion>
                  <!-- <mavenExecutable>mvnDebug</mavenExecutable> -->
                  <postBuildHookScript>verify</postBuildHookScript>
               </configuration>
            </plugin>
         </plugins>
      </pluginManagement>

      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>buildnumber-maven-plugin</artifactId>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>11</source>
               <target>11</target>
               <compilerArgs>
                  <arg>--add-exports</arg>
                  <arg>jdk.javadoc/jdk.javadoc.internal.tool=hiderdoclet</arg>
                  <arg>--add-exports</arg>
                  <arg>jdk.compiler/com.sun.tools.javac.parser=hiderdoclet</arg>
                  <arg>--add-exports</arg>
                  <arg>jdk.compiler/com.sun.tools.javac.tree=hiderdoclet</arg>
                  <arg>--add-exports</arg>
                  <arg>jdk.compiler/com.sun.tools.javac.model=hiderdoclet</arg>
               </compilerArgs>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <modules>
      <module>doclet</module>
      <module>test</module>
   </modules>

</project>
